--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,15 +28,15 @@ on:
       os:
         description: 'OS version: ubuntu:20.04, ubuntu:22.04, centos:7 or centos:8'
         required: true
-        default: 'ubuntu:20.04'
+        default: 'centos:7'
       spark:
         description: 'Spark version: spark-3.2, spark-3.3, spark-3.4 or spark-3.5'
         required: true
-        default: 'spark-3.5'
+        default: 'spark-3.4'
       hadoop:
         description: 'Hadoop version: 2.7.4, 3.2.0, 3.2.2, 3.3.1, 3.3.3 or 3.3.6'
         required: true
-        default: '3.3.3'
+        default: '3.2.2'
 
 jobs:
   build-native-lib:
